# gba-eval

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONTACT.md  Cargo.toml  LEGAL.md  LICENSE  LICENSE-MIT  NOTICE  README.md
candidates/: LICENSE  README.md
candidates/gba-core/: Cargo.toml  build.sh  gba_core_shim.wasm
candidates/gba-core/.cargo/: config.toml
candidates/gba-core/src/: apu.rs  bus.rs  dma.rs  gba.rs  gpio.rs  io.rs  lib.rs  ppu.rs  save.rs  scheduler.rs  timer.rs  waitstates.rs
candidates/gba-core/src/cpu/: alu.rs  arm.rs  mod.rs  thumb.rs
candidates/gba-core/wasm-shim/: Cargo.toml
candidates/gba-core/wasm-shim/src/: lib.rs
corpus/: LICENSE  README.md  grader.yaml  testcases.json
corpus/reference-cache/: aw-arm-alu.refcache  aw-arm-ldm-stm.refcache  aw-arm-ldr-str.refcache  aw-thumb-alu.refcache  aw-thumb-ldm-stm.refcache  aw-thumb-ldr-str.refcache  bulletgba-boot-spam-a.refcache  bulletgba-boot.refcache  bulletgba-gameplay.refcache  celeste-boot-spam-a.refcache  celeste-boot.refcache  celeste-gameplay.refcache  chip-advance-boot-spam-a.refcache  chip-advance-boot.refcache  chip-advance-gameplay.refcache  collie-defense-boot-spam-a.refcache  collie-defense-boot.refcache  collie-defense-gameplay.refcache  dma-priority.refcache  goodboy-boot-spam-a.refcache  goodboy-boot.refcache  goodboy-gameplay.refcache  heartwrench-boot-spam-a.refcache  heartwrench-boot.refcache  heartwrench-gameplay.refcache  memory.refcache  mgba-carry.refcache  mgba-dma.refcache  mgba-io-read.refcache  mgba-multiply-long.refcache  mgba-shifter.refcache  piugba-boot-spam-a.refcache  piugba-boot.refcache  piugba-gameplay.refcache  ppu-vram-mirror.refcache  spout-boot-spam-a.refcache  spout-boot.refcache  spout-gameplay.refcache  timer-reload.refcache  timer-start-stop.refcache  (+11 more)
corpus/replays/: aw-arm-alu.txt  aw-arm-ldm-stm.txt  aw-arm-ldr-str.txt  aw-thumb-alu.txt  aw-thumb-ldm-stm.txt  aw-thumb-ldr-str.txt  bulletgba-boot-spam-a.txt  bulletgba-gameplay.txt  celeste-boot-spam-a.txt  celeste-demo.txt  celeste-gameplay.txt  chip-advance-boot-spam-a.txt  chip-advance-gameplay.txt  collie-defense-boot-spam-a.txt  collie-defense-gameplay.txt  goodboy-boot-spam-a.txt  goodboy-gameplay.txt  heartwrench-boot-spam-a.txt  heartwrench-demo.txt  heartwrench-gameplay.txt  mgba-bios-math.txt  mgba-carry.txt  mgba-dma.txt  mgba-edge-cases.txt  mgba-io-read.txt  mgba-memory.txt  mgba-multiply-long.txt  mgba-shifter.txt  mgba-sio-reg.txt  mgba-sio-timing.txt  mgba-timer-countup.txt  mgba-timer-irq.txt  mgba-timing.txt  mgba-video.txt  piugba-boot-spam-a.txt  piugba-gameplay.txt  press-a.txt  press-start.txt  spout-boot-spam-a.txt  spout-gameplay.txt  (+4 more)
corpus/roms/homebrew/: heartwrench-advance.gba
harness/: LICENSE
harness/dump/: Cargo.toml
harness/dump/src/: main.rs
harness/grader/: Cargo.toml
harness/grader/src/: corpus.rs  lib.rs  main.rs  passfail.rs  ref_cache.rs  wasm_candidate.rs
harness/lockstep/: Cargo.toml  build.rs
harness/lockstep/src/: audio.rs  lib.rs  media.rs  mesen.rs  replay.rs  result.rs  video.rs  video_encode.rs
harness/oracle/: Cargo.toml
harness/oracle/src/: main.rs
quickstart/: .env.example  README.md  docker-compose.yml  grade.sh  shell.sh  smoke-test.sh
quickstart/grader/: Dockerfile
quickstart/services/: Dockerfile  oracle-server.py  run.sh
quickstart/task/: Dockerfile  TASK.md  oracle-client
reference/: FORK.md  LICENSE  build-mesen.sh  mesen.wasm  mesen_step.cpp
spec/: ABI.md  LICENSE  gba_bios_stub.h  gen_bios_stub.py  vendor-gbatek.sh
