[package]
name = "grader"
version = "0.1.0"
edition = "2021"

[dependencies]
lockstep = { path = "../lockstep" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
sha2 = "0.10"
png = "0.17"
# Reference-frame cache: record Mesen's per-frame output once, replay
# against every candidate instead of re-running Mesen. bincode for compact
# binary encoding of the cache struct; zstd because gameplay frames have
# very high inter-frame redundancy and compress ~30× without slowing
# grade much.
bincode = "1.3"
zstd = "0.13"
rayon = "1"

# wasmtime: load candidate.wasm. We don't need WASI — the ABI is pure
# C exports + linear memory, no syscalls. Disable default features and
# pull only the runtime + cranelift backend.
wasmtime = { version = "27", default-features = false, features = ["cranelift", "runtime"] }
