[package]
name = "lockstep"
version = "0.1.0"
edition = "2021"

# build.rs compiles the Mesen shim if a prebuilt libmesen.a is present;
# otherwise it skips and the crate compiles unchanged.
[build-dependencies]
cc = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# FFT for the log-mel audio scoring pipeline (see audio.rs).
rustfft = "6"
png = "0.17"
